--- a/src/app/pages/vardiya/components/karsilastirma/karsilastirma.component.html
+++ b/src/app/pages/vardiya/components/karsilastirma/karsilastirma.component.html
@@ -54,7 +54,7 @@
                         </p-select>
                     </div>
                     <p-button icon="pi pi-refresh" severity="secondary" [loading]="loading"
-                        (onClick)="karsilastirmaYap()" styleClass="mt-5"></p-button>
+                        (onClick)="karsilastirmaYap()" styleClass="mt-5 hidden md:inline-flex"></p-button>
                 </div>
             </div>
         </div>
